fixed auth and added unit test for services